# raytracer

./: CMakeLists.txt  CMakePresets.json  README.md  flake.nix
include/: image.hpp  intersect.hpp  logging.hpp  random.hpp  traceray.hpp  types.hpp  utils.hpp
include/bvh/: bvh.hpp  primitive.hpp
include/geometry/: aabb.hpp  intersection.hpp  mesh.hpp  ray.hpp  sphere.hpp
include/illum/: lights.hpp  material.hpp  phong.hpp
include/math/: coor.hpp  matrix.hpp  vec.hpp
include/parse/: objparse.hpp  xmlparse.hpp
lib/: CMakeLists.txt
lib/libspng-0.7.4/: CMakeLists.txt
lib/tinyxml2-11.0.0/: CMakeLists.txt
res/custom/: custom-dof.xml  custom-one-render.xml
res/provided/: example1.xml  example2.xml  example3.xml  example4.xml  example5.xml  example6.xml  example7.xml
src/: image.cpp  main.cpp  random.cpp  traceray.cpp
src/bvh/: bvh-sah.cpp  bvh.cpp
src/geometry/: aabb.cpp  mesh.cpp  sphere.cpp
src/illum/: material.cpp  phong.cpp
src/parse/: objparse.cpp  xmlparse.cpp
